--- a/Frontend/Signup/src/app/signup/signup.component.html
+++ b/Frontend/Signup/src/app/signup/signup.component.html
@@ -1,4 +1,5 @@
 <br /><br />
+THIS IS A SDAMPLE LOGIN PAGE !!!
 <div class="login-wrap">
   <div class="login-html">
     <input id="tab-1" type="radio" name="tab" class="sign-in" checked /><label
