--- a/Frontend/Car Selection Page/Car-Selection-Page/src/app/car-selection/car-selection.component.css
+++ b/Frontend/Car Selection Page/Car-Selection-Page/src/app/car-selection/car-selection.component.css
@@ -602,6 +602,30 @@
   }
 }
 
+
+.stars {
+  display: inline-block;
+}
+
+.star-icon {
+  position: relative;
+  left: 10px;
+  top: 3px;
+  width: 20px;
+  height: 20px;
+  margin-right: 7px;
+}
+
+.warranty-icon {
+  position: relative;
+  left: 3px;
+  top: 7px;
+  width: 32px;
+  height: 29px;
+  
+}
+
+
 .cycling-image {
   width: 60%;
 
