--- a/Frontend/Car Selection Page/Car-Selection-Page/src/app/car-selection/car-selection.component.html
+++ b/Frontend/Car Selection Page/Car-Selection-Page/src/app/car-selection/car-selection.component.html
@@ -287,85 +287,65 @@
 
   <ng-template #carsDisplay>
     <div class="cars-display">
-      <div *ngFor="let car of displayedCars" class="car-card animate-on-scroll">
-        <div class="car-image-container">
-          <img [src]="car.image" alt="{{ car.name }}" class="car-image" />
-        </div>
-        <h3 class="car-name space middle">
-          <img [src]="car.brandIcon" alt="" class="brandimg" />{{ car.name }}
-        </h3>
-        <div class="combine">
-          <div class="vertical-bar"></div>
-          <h4 class="car-details space">{{ car.details }}</h4>
-        </div>
-        <div class="car-details-container">
-          <div class="left-side">
-            <p class="car-release-year car-details space">
-              <strong>Release Year:</strong> {{ car.releaseYear }}
-            </p>
-            <p class="car-price car-details space">
-              <strong>Price:</strong> INR {{ car.price.INR }} / USD
-              {{ car.price.USD }}
-            </p>
-            <p class="car-bookings car-details space">
-              <strong>Bookings:</strong> {{ car.bookings }}+
-            </p>
-            <p class="car-bookings car-details space">
-              <strong>Seater:</strong> {{ car.seater }}
-            </p>
+        <div *ngFor="let car of displayedCars" class="car-card animate-on-scroll">
+            <div class="car-image-container">
+                <img [src]="car.image" alt="{{ car.name }}" class="car-image" />
+            </div>
+            <h3 class="car-name space middle"><img [src]="car.brandIcon" alt="" class="brandimg">{{ car.name }}</h3>
+            <div class="combine">
+                <div class="vertical-bar"></div>
+                <h4 class="car-details space">{{ car.details }}</h4>
+            </div>
+            <div class="car-details-container">
+                <div class="left-side">
+                    <p class="car-release-year car-details space"><strong>Release Year:</strong> {{ car.releaseYear
+                        }}</p>
+                    <p class="car-price car-details space">
+                        <strong>Price:</strong> INR {{ car.price.INR }} / USD {{ car.price.USD }}
+                    </p>
+                    <p class="car-bookings car-details space"><strong>Bookings:</strong> {{ car.bookings }}+</p>
+                    <p class="car-bookings car-details space"><strong>Seater:</strong> {{ car.seater }}</p>
 
-            <p class="car-bookings car-details space">
-              <strong>Engine Type:</strong> {{ car.engineType }}
-            </p>
-            <p class="car-bookings car-details space">
-              <strong>Rating:</strong> {{ car.rating }}
-            </p>
-          </div>
-          <div class="divider"></div>
-          <div class="right-side">
-            <p class="car-bookings car-details space">
-              <strong>Availability:</strong> {{ car.availability }}
-            </p>
-            <p class="car-bookings car-details space">
-              <strong>Fuel Efficiency:</strong> Up to
-              {{ car.fuelEfficiency }}km/l
-            </p>
-            <p class="car-bookings car-details space">
-              <strong>Color:</strong> {{ car.color }}
-            </p>
-            <p class="car-bookings car-details space">
-              <strong>Drive Type/Mode:</strong> {{ car.driveType }}
-            </p>
-            <p class="car-bookings car-details space">
-              <strong>Transmission:</strong> {{ car.transmission }}
-            </p>
-            <p class="car-bookings car-details space">
-              <strong>Warranty:</strong> {{ car.warranty }} Years
-            </p>
-          </div>
+                    <p class="car-bookings car-details space"><strong>Engine Type:</strong> {{ car.engineType }}</p>
+                    <p class="car-bookings car-details space">
+                        <strong>Rating:</strong>
+                        <span class="stars">
+                          <img *ngFor="let star of [].constructor(car.rating)" src="assets/images/star.png" alt="Star" class="star-icon" />
+                        </span>
+                      </p>
+                      
+                </div>
+                <div class="divider"></div>
+                <div class="right-side">
+                    <p class="car-bookings car-details space"><strong>Availability:</strong> {{ car.availability }}
+                    </p>
+                    <p class="car-bookings car-details space"><strong>Fuel Efficiency:</strong> Up to {{
+                        car.fuelEfficiency }}km/l</p>
+                    <p class="car-bookings car-details space"><strong>Color:</strong> {{ car.color }}</p>
+                    <p class="car-bookings car-details space"><strong>Drive Type/Mode:</strong> {{ car.driveType }}
+                    </p>
+                    <p class="car-bookings car-details space"><strong>Transmission:</strong> {{ car.transmission }}
+                    </p>
+                    <p class="car-bookings car-details space"><strong>Warranty:</strong> {{ car.warranty }} Years<img src="assets/images/warn.png" alt="" class="warranty-icon">
+                    </p>
+                </div>
+            </div>
+            <div class="extra-features car-details space">
+                <strong class="extra-features-title">Extra Features:</strong>
+                <ul>
+                    <li *ngFor="let feature of car.extraFeatures">
+                        <img src="/assets/images/ver.png" alt="Verified" class="verified-icon" />
+                        {{ feature }}
+                    </li>
+                </ul>
+            </div>
+            <button class="book-slot-btn">
+                <img [src]="'/assets/images/bkslot.png'" alt="Book Slot" class="slot-icon" />
+                Book Slot
+            </button>
         </div>
-        <div class="extra-features car-details space">
-          <strong class="extra-features-title">Extra Features:</strong>
-          <ul>
-            <li *ngFor="let feature of car.extraFeatures">
-              <img
-                src="/assets/images/ver.png"
-                alt="Verified"
-                class="verified-icon"
-              />
-              {{ feature }}
-            </li>
-          </ul>
-        </div>
-        <button class="book-slot-btn">
-          <img
-            [src]="'/assets/images/bkslot.png'"
-            alt="Book Slot"
-            class="slot-icon"
-          />
-          Book Slot
-        </button>
-      </div>
     </div>
-  </ng-template>
+
+</ng-template>
+
 </div>
