--- a/Frontend/Car Selection Page/Car-Selection-Page/src/app/car-selection/car-selection.component.html
+++ b/Frontend/Car Selection Page/Car-Selection-Page/src/app/car-selection/car-selection.component.html
@@ -48,7 +48,7 @@ Container Main start
             preferences. Once you’ve found the car that catches your eye,
             booking a test drive is just a few taps away. Whether you're after
             performance, style, or practicality, we’re here to ensure your
-            car-buying journey is seamless and exciting. Book your test drive
+            car-buying journey is to be seamless and exciting. Book your test drive
             today and experience your future car firsthand!
           </p>
         </div>
