--- a/Frontend/Admin/src/app/showrooms/showrooms.component.css
+++ b/Frontend/Admin/src/app/showrooms/showrooms.component.css
@@ -9,11 +9,16 @@
   }
   
   .card-title {
-    color: #f7c600;
+    color: #5c94d5;
   }
   
   .card-text {
     font-size: 14px;
     color: #555;
   }
-  
+  #showroom {
+    margin-left: 250px; /* Adjust based on the width of the navbar */
+    width: calc(100% - 250px); /* Make the dashboard take the rest of the available space */
+    padding: 20px;
+    box-sizing: border-box;
+  }
