--- a/Frontend/Signup/src/app/signup/signup.component.html
+++ b/Frontend/Signup/src/app/signup/signup.component.html
@@ -1,35 +1,19 @@
 <br /><br />
 <div class="login-wrap">
   <div class="login-html">
-    <input id="tab-1" type="radio" name="tab" class="sign-in" checked /><label
-      for="tab-1"
-      class="tab"
-      >Sign In</label
-    >
-    <input id="tab-2" type="radio" name="tab" class="sign-up" /><label
-      for="tab-2"
-      class="tab"
-      >Sign Up</label
-    >
+    <input id="tab-1" type="radio" name="tab" class="sign-in" checked /><label for="tab-1" class="tab">Sign In</label>
+    <input id="tab-2" type="radio" name="tab" class="sign-up" /><label for="tab-2" class="tab">Sign Up</label>
     <div class="login-form">
-      <form [formGroup]="loginForm" >
+      <form [formGroup]="loginForm">
         <div class="form-group">
           <div class="sign-in-htm">
             <div class="group">
               <label for="email" class="label">Email</label>
-              <input 
-                type="email"
-                class="input"
-                formControlName="email"
-                placeholder="Enter your email"
-              />
-              <div
-                *ngIf="
+              <input type="email" class="input" formControlName="email" placeholder="Enter your email" />
+              <div *ngIf="
                   loginForm.get('email')?.touched &&
                   loginForm.get('email')?.invalid
-                "
-                class="text-danger"
-              >
+                " class="text-danger">
                 <div *ngIf="loginForm.get('email')?.hasError('required')">
                   Email is required
                 </div>
@@ -38,22 +22,13 @@
                 </div>
               </div>
             </div>
-
             <div class="group">
               <label for="pass" class="label">Password</label>
-              <input
-                type="password"
-                class="input"
-                formControlName="password"
-                placeholder="Enter your password"
-              />
-              <div
-                *ngIf="
+              <input type="password" class="input" formControlName="password" placeholder="Enter your password" />
+              <div *ngIf="
                   loginForm.get('password')?.touched &&
                   loginForm.get('password')?.invalid
-                "
-                class="text-danger"
-              >
+                " class="text-danger">
                 <div *ngIf="loginForm.get('password')?.hasError('required')">
                   Password is required
                 </div>
@@ -61,23 +36,12 @@
             </div>
 
             <div class="group">
-              <input
-                type="submit"
-                class="button"
-                [disabled]="loginForm.invalid"
-                value="Sign In"
-              />
+              <input type="submit" class="button" [disabled]="loginForm.invalid" value="Sign In" />
             </div>
             <div class="hr"></div>
             <div class="foot-lnk">
               <a>
-                <input
-                  id="tab-2"
-                  type="radio"
-                  name="tab"
-                  class="sign-up"
-                /><label for="tab-2">New user ?</label></a
-              >
+                <input id="tab-2" type="radio" name="tab" class="sign-up" /><label for="tab-2">New user ?</label></a>
             </div>
           </div>
         </div>
@@ -88,19 +52,11 @@
           <div class="sign-up-htm">
             <div class="group">
               <label for="user" class="label">Username</label>
-              <input
-                type="text"
-                class="input"
-                formControlName="name"
-                placeholder="Enter your name"
-              />
-              <div
-                *ngIf="
+              <input type="text" class="input" formControlName="name" placeholder="Enter your name" />
+              <div *ngIf="
                   signUpForm.get('name')?.touched &&
                   signUpForm.get('name')?.invalid
-                "
-                class="text-danger"
-              >
+                " class="text-danger">
                 <div *ngIf="signUpForm.get('name')?.hasError('required')">
                   Name is required
                 </div>
@@ -114,19 +70,11 @@
             </div>
             <div class="group">
               <label for="pass" class="label">Password</label>
-              <input
-                type="password"
-                class="input"
-                formControlName="password"
-                placeholder="Enter your password"
-              />
-              <div
-                *ngIf="
+              <input type="password" class="input" formControlName="password" placeholder="Enter your password" />
+              <div *ngIf="
                   loginForm.get('password')?.touched &&
                   loginForm.get('password')?.invalid
-                "
-                class="text-danger"
-              >
+                " class="text-danger">
                 <div *ngIf="loginForm.get('password')?.hasError('required')">
                   Password is required
                 </div>
@@ -134,28 +82,15 @@
             </div>
             <div class="group">
               <label for="pass" class="label">Repeat Password</label>
-              <input
-                id="pass"
-                type="password"
-                class="input"
-                data-type="password"
-              />
+              <input id="pass" type="password" class="input" data-type="password" />
             </div>
             <div class="group">
               <label for="pass" class="label">Email Address</label>
-              <input
-                type="email"
-                class="input"
-                formControlName="email"
-                placeholder="Enter your email"
-              />
-              <div
-                *ngIf="
+              <input type="email" class="input" formControlName="email" placeholder="Enter your email" />
+              <div *ngIf="
                   signUpForm.get('email')?.touched &&
                   signUpForm.get('email')?.invalid
-                "
-                class="text-danger"
-              >
+                " class="text-danger">
                 <div *ngIf="signUpForm.get('email')?.hasError('required')">
                   Email is required
                 </div>
@@ -165,10 +100,7 @@
               </div>
             </div>
             <div class="group">
-              <button
-              class="button"
-               (click)="submit()"
-              >Sign Up</button>
+              <button class="button" (click)="submit()">Sign Up</button>
             </div>
             <div class="hr"></div>
             <div class="foot-lnk">
@@ -180,6 +112,9 @@
     </div>
   </div>
 </div>
+
+
+
 
 <!-- Optional: You can add icons using FontAwesome for visual enhancement -->
 <!-- <i class="fa fa-check-circle" aria-hidden="true"></i> -->
