Added charts in Admin

--- a/Frontend/Admin/src/app/navbar/navbar.component.html
+++ b/Frontend/Admin/src/app/navbar/navbar.component.html
@@ -1,9 +1,18 @@
 <aside class="sidebar-nav-wrapper">
     <div class="navbar-logo">
-      <a href="index.html">
-        MyRNM Admin
+      <!-- <a href="index.html">
+        MyRNM Admin -->
         <!-- <img src="assets/images/logo/logo.svg" alt="logo" /> -->
-      </a>
+      <!-- </a> -->
+      <div class="profile-info d-flex align-items-center" id="pinfo">
+        <div class="image">
+            <img src="https://static.vecteezy.com/system/resources/previews/009/636/683/non_2x/admin-3d-illustration-icon-png.png" alt="image" height="48px" />
+        </div>
+        <div class="text ml-2">
+            <h6 class="fw-500 text-black">MyRNM Admin</h6>
+            <!-- <p>Admin</p> -->
+        </div>
+    </div>
     </div>
     <nav class="sidebar-nav">
       <ul>
