--- a/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
+++ b/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
@@ -11,20 +11,7 @@
           </div>
         </div>
         <!-- end col -->
-        <div class="col-md-6">
-          <div class="breadcrumb-wrapper">
-            <nav aria-label="breadcrumb">
-              <ol class="breadcrumb">
-                <li class="breadcrumb-item">
-                  <a href="#0">MyRNM</a>
-                </li>
-                <li class="breadcrumb-item active" aria-current="page">
-                  Dashboard
-                </li>
-              </ol>
-            </nav>
-          </div>
-        </div>
+    
         <!-- end col -->
       </div>
       <!-- end row -->
@@ -102,55 +89,115 @@
     </div>
     <!-- End Row -->
     <div class="row">
-     <!-- <section class="section">
-  <div class="container-fluid">
-    <div class="row">
       <div class="col-lg-7">
         <div class="card-style mb-30">
           <div class="title d-flex flex-wrap justify-content-between">
             <div class="left">
-              <h6 class="text-medium mb-10">User Growth (Bookings)</h6>
+              <h6 class="text-medium mb-10">Yearly Stats</h6>
             </div>
+           
           </div>
+          <!-- End Title -->
           <div class="chart">
-            <ngx-charts-bar-vertical
-              [view]="barChartOptions.view"
-              [scheme]="barChartOptions.colorScheme"
-              [results]="userGrowthData"
-              [xAxis]="barChartOptions.showXAxis"
-              [yAxis]="barChartOptions.showYAxis"
-              [legend]="barChartOptions.showLegend"
-              [xAxisLabel]="barChartOptions.xAxisLabel"
-              [yAxisLabel]="barChartOptions.yAxisLabel">
-            </ngx-charts-bar-vertical>
+            <canvas id="Chart1" style="width: 100%; height: 400px; margin-left: -35px;"></canvas>
           </div>
+          <!-- End Chart -->
         </div>
       </div>
-
+      <!-- End Col -->
       <div class="col-lg-5">
         <div class="card-style mb-30">
           <div class="title d-flex flex-wrap align-items-center justify-content-between">
             <div class="left">
-              <h6 class="text-medium mb-30">Income Trends</h6>
+              <h6 class="text-medium mb-30">Car Sales</h6>
             </div>
+            
           </div>
+          <!-- End Title -->
           <div class="chart">
-            <ngx-charts-line-chart
-              [view]="lineChartOptions.view"
-              [scheme]="lineChartOptions.colorScheme"
-              [results]="incomeData"
-              [xAxis]="lineChartOptions.showXAxis"
-              [yAxis]="lineChartOptions.showYAxis"
-              [legend]="lineChartOptions.showLegend"
-              [xAxisLabel]="lineChartOptions.xAxisLabel"
-              [yAxisLabel]="lineChartOptions.yAxisLabel">
-            </ngx-charts-line-chart>
+            <canvas id="Chart2" style="width: 100%; height: 400px; margin-left: -45px;"></canvas>
           </div>
+          <!-- End Chart -->
+        </div>
+      </div>
+      <!-- End Col -->
+      <div class="col">
+        <div id="legend3">
+          <ul class="legend3 d-flex flex-wrap align-items-center mb-30">
+            <li>
+              <div class="d-flex">
+                <span class="bg-color primary-bg"> </span>
+                <div class="text">
+                  <p class="text-sm text-success">
+                    <span class="text-dark">Revenue</span> +25.55%
+                  </p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="d-flex">
+                <span class="bg-color purple-bg"></span>
+                <div class="text">
+                  <p class="text-sm text-success">
+                    <span class="text-dark">Net Profit</span> +45.55%
+                  </p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="d-flex">
+                <span class="bg-color orange-bg"></span>
+                <div class="text">
+                  <p class="text-sm text-danger">
+                    <span class="text-dark">Order</span> -4.2%
+                  </p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <canvas id="Chart3" style="width: 100%; height: 450px; margin-left: -35px;"></canvas>
+      </div>
+
+      <div class="col-lg-5">
+        <div class="card-style mb-30">
+          
+          <!-- End Title -->
+          <div class="chart">
+            <div id="legend4">
+              <ul class="legend3 d-flex flex-wrap gap-3 gap-sm-0 align-items-center mb-30">
+                <li>
+                  <div class="d-flex">
+                    <span class="bg-color primary-bg"> </span>
+                    <div class="text">
+                      <p class="text-sm text-success">
+                        <span class="text-dark">Showroom Visits</span>
+                        +25.55%
+                      </p>
+                      <h2>3456</h2>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="d-flex">
+                    <span class="bg-color danger-bg"></span>
+                    <div class="text">
+                      <p class="text-sm text-danger">
+                        <span class="text-dark">No show</span> -2.05%
+                      </p>
+                      <h2>3456</h2>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <canvas id="Chart4" style="width: 100%; height: 420px; margin-left: -35px;"></canvas>
+          </div>
+          <!-- End Chart -->
         </div>
       </div>
     </div>
-  </div>
-</section> -->
-    </div>
-  </div>
-</section>
+    
+ </div>
+</section> 
+   
