--- a/Frontend/Admin/src/app/admin-header/admin-header.component.html
+++ b/Frontend/Admin/src/app/admin-header/admin-header.component.html
@@ -1,28 +1,28 @@
 
   <app-navbar></app-navbar>
-  <header class="header" style="background-color: rgb(82, 147, 231); height: 12vh;">
+  <!-- <header class="header" style="background-color: rgb(82, 147, 231); height: 12vh;">
     <div class="container-fluid">
         <div class="row d-flex justify-content-end">
-            <div class="col-auto">
+            <div class="col-auto"> -->
                 <!-- profile start -->
-                <div class="profile-box ml-15">
+                <!-- <div class="profile-box ml-15">
                     <button class="bg-transparent border-0" type="button" id="profile" aria-expanded="false">
                         <div class="profile-info d-flex align-items-center">
                             <div class="image">
                                 <img src="https://static.vecteezy.com/system/resources/previews/009/636/683/non_2x/admin-3d-illustration-icon-png.png" alt="image" height="48px" />
                             </div>
                             <div class="text ml-2">
-                                <h6 class="fw-500 text-white">MyRNM Admin</h6>
+                                <h6 class="fw-500 text-white">MyRNM Admin</h6> -->
                                 <!-- <p>Admin</p> -->
-                            </div>
+                            <!-- </div>
                         </div>
                     </button>
-                </div>
+                </div> -->
                 <!-- profile end -->
-            </div>
+            <!-- </div>
         </div>
     </div>
-</header>
+</header> -->
 
   <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"> -->
     <!-- <div class="container-fluid"> -->
