--- a/Frontend/Admin/src/app/navbar/navbar.component.css
+++ b/Frontend/Admin/src/app/navbar/navbar.component.css
@@ -1,7 +1,27 @@
-/*===========================
-		COMMON css
-===========================*/
-/* @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"); */
+header {
+  margin-left: 250px; /* Adjust based on the width of the navbar */
+  width: calc(100% - 250px); /* Make the dashboard take the rest of the available space */
+  padding: 20px;
+  box-sizing: border-box;
+}
+/* Add these styles in your CSS file or in a <style> block */
+#pinfo {
+  background-color: #ebebeb;
+  border-radius: 5rem;
+  padding: 0.6rem;
+}
+
+.profile-box:hover {
+  background-color: rgba(255, 255, 255, 0.3); /* Darker background on hover */
+}
+
+.image img {
+  border-radius: 50%; /* Make the profile image circular */
+}
+
+.text h6 {
+  margin: 0; /* Remove default margin from <h6> */
+}
 
 .text{
   font-size: 18px;
