--- a/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
+++ b/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
@@ -99,7 +99,7 @@
           </div>
           <!-- End Title -->
           <div class="chart">
-            <canvas id="Chart1" style="width: 100%; height: 400px; margin-left: -35px;"></canvas>
+            <canvas id="Chart1" style="width: 100%; height: 400px; margin-left: -35px;">{{chart}}</canvas>
           </div>
           <!-- End Chart -->
         </div>
@@ -115,7 +115,7 @@
           </div>
           <!-- End Title -->
           <div class="chart">
-            <canvas id="Chart2" style="width: 100%; height: 400px; margin-left: -45px;"></canvas>
+            <canvas id="Chart2" style="width: 100%; height: 400px; margin-left: -45px;">{{chart2}}</canvas>
           </div>
           <!-- End Chart -->
         </div>
@@ -156,7 +156,7 @@
             </li>
           </ul>
         </div>
-        <canvas id="Chart3" style="width: 100%; height: 450px; margin-left: -35px;"></canvas>
+        <canvas id="Chart3" style="width: 100%; height: 450px; margin-left: -35px;">{{chart3}}</canvas>
       </div>
 
       <div class="col-lg-5">
@@ -191,7 +191,7 @@
                 </li>
               </ul>
             </div>
-            <canvas id="Chart4" style="width: 100%; height: 420px; margin-left: -35px;"></canvas>
+            <canvas id="Chart4" style="width: 100%; height: 420px; margin-left: -35px;">{{chart4}}</canvas>
           </div>
           <!-- End Chart -->
         </div>
