--- a/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
+++ b/Frontend/Admin/src/app/admin-dashbaord/admin-dashbaord.component.html
@@ -5,7 +5,7 @@
     <!-- ========== title-wrapper start ========== -->
     <div class="title-wrapper pt-30">
       <div class="row align-items-center">
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-6 col-lg-6">
           <div class="title">
             <h2>MyRNM Dashboard</h2>
           </div>
@@ -18,7 +18,7 @@
     </div>
     <!-- ========== title-wrapper end ========== -->
     <div class="row">
-      <div class="col-xl-3 col-lg-4 col-sm-6">
+      <div class="col-xl-3 col-lg-4 col-sm-6 ">
         <div class="icon-card mb-30">
           <div class="icon purple">
             <i class="bi bi-person-fill"></i>
