--- a/Frontend/Admin/src/app/admin-settings/admin-settings.component.html
+++ b/Frontend/Admin/src/app/admin-settings/admin-settings.component.html
@@ -107,7 +107,7 @@
             </div>
           </div>
           <div class="col-12">
-            <button class="main-btn primary-btn btn-hover">
+            <button class="main-btn primary-btn btn-hover" id="updatep">
               Update Profile
             </button>
           </div>
