--- a/Frontend/Admin/src/app/notifications/notifications.component.html
+++ b/Frontend/Admin/src/app/notifications/notifications.component.html
@@ -7,7 +7,7 @@
           <div class="col-md-6">
             <div class="title">
               <h2>Notifications</h2>
-            </div>
+            </div><br><br>
           </div>
           <!-- end col -->
       
